website fixes for readability
my website is now more readable

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #2f4f4f;
+    background-color: #d8dbdb;
     display: flex;
     flex-direction: column;
 }
 
 h2 {
-    color: white;
+    color: rgb(0, 0, 0);
     flex: auto;
     font-size: x-large;
     font-weight: bolder;
@@ -14,7 +14,7 @@ h2 {
 }
 
 h3 {
-    color: white;
+    color: rgb(0, 0, 0);
     flex: auto;
     font-weight: normal;
     font-size: large;
@@ -23,7 +23,7 @@ h3 {
 }
 
 h4 {
-    color: white;
+    color: rgb(0, 0, 0);
     flex: auto;
     font-weight: normal;
     font-family: 'Verdana', 'Geneva', 'Tahoma', 'sans-serif';
@@ -31,7 +31,7 @@ h4 {
 }
 
 h5 {
-    color: white;
+    color: rgb(0, 0, 0);
     flex: auto;
     font-weight: normal;
     font-family: 'Verdana', 'Geneva', 'Tahoma', 'sans-serif';
